# dotfm

./: Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/commands/: add.rs  init.rs  load.rs  mod.rs  remove.rs  restore.rs
src/commands/base/: add.rs  check.rs  diff.rs  init.rs  list.rs  load.rs  mod.rs  pull.rs  push.rs  remove.rs  restore.rs  sync.rs
src/commands/package/: add.rs  install.rs  mod.rs  remove.rs
src/commands/package/manager/: add.rs  mod.rs  remove.rs
src/core/: cli.rs  config.rs  diffs.rs  error.rs  mod.rs  paths.rs  repo.rs
